Fix spacing around tables and make text under numbers bold

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,12 +11,13 @@ section {
 };
 
 h1 {
-  font-size: 36px;
+  font-size: 34px;
   margin: 0;
+  margin-bottom: 15px;
 };
 
 h2 {
-  font-size: 32px;
+  font-size: 30px;
   margin: 0px;
 }
 
@@ -90,13 +91,15 @@ main {
 .weekly-water {
   color: #096d5c;
   width: 300px;
-  height: 300px;
+  height: 280px;
+  margin-bottom: 15px;
 }
 
 .weekly-sleep {
   color: #3c096c;
-  width: 450px;
-  height: 300px;
+  width: 600px;
+  height: 280px;
+  margin-bottom: 15px;
 }
 
 .sleep-table-heading {
@@ -166,11 +169,13 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 15px;
+  margin: 0px 15px 15px 15px;
 }
 
 .text-under-number {
   margin: 0;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .weekly-table-container {
@@ -180,4 +185,14 @@ main {
 .daily-heading,
 .weekly-heading {
   margin-bottom: 10px;
+}
+
+.steps-today {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.small-txt {
+  font-size: 16px;
 }
